# samsung-health-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  anomaly_example.py  example.py  ml_example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
samsung_health_sdk/: __init__.py  exercise_analysis.py  features.py  parser.py  utils.py
samsung_health_sdk/metrics/: __init__.py  base.py  exercise.py  heart_rate.py  respiratory_rate.py  skin_temperature.py  sleep.py  spo2.py  steps.py  stress.py
samsung_health_sdk/ml/: __init__.py  dataset.py  feature_matrix.py  insights.py  model.py  signal_dataset.py  signal_models.py  trainer.py
samsung_health_sdk/report/: __init__.py  builder.py  run_dashboard.html  run_dashboard.py  template.html
scripts/: bump_version.py
tests/: test_utils.py
